<resources>
    <string name="app_name">AccountManager</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="sync">Sync</string>
    <string name="search">Search</string>
    <string name="account_name">Account Name</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="note">Note</string>
    <string name="home">Home</string>

</resources>